# jlinops

./: README.md  conda-packages.txt  install_conda_packages.sh  kubeflow_instructions.txt  pip-packages.txt  pyproject.toml  requirements.txt  setup.py
dev/: laplacians.ipynb  solve_dirichlet_sym.ipynb  triangular.ipynb
dev/1d_spectral_gradients.ipynb/: first_derivative.ipynb
dev/block/: block_diagonal.ipynb
dev/dst/: test.ipynb
dev/ecgls/: condest.ipynb  final_implementation.ipynb  test.ipynb
dev/gks/: gks_test.ipynb
dev/inv_sqrt/: test.ipynb
dev/ipcg/: flexible_cg.ipynb  flexible_cg_truncated.ipynb  ipcg_test.ipynb
dev/kronecker/: kronecker_test.ipynb
dev/other/: base_class.ipynb  cg_inverse.ipynb  cg_pseudoinverse.ipynb  cholesky.ipynb  conditional_linop.ipynb  diagonalized_operator.ipynb  final_cg_pseudoinverse.ipynb  gradient_cg_pseudoinverse.ipynb  kronecker.ipynb  matrix_operator.ipynb  playground.ipynb  pyamg.ipynb  subsampling.ipynb  testing.ipynb  testing_formula.ipynb
dev/outer_products/: test.ipynb
dev/projectors/: orthogonal.ipynb
dev/reworking/: 1d_wavelets.ipynb  dirichlet_2d_sym.ipynb  dirichlet_operator.ipynb  just_R.eps  lapinv_results.eps  lapinv_results_iterations.eps  lapinv_results_wallclock.eps  laplacian_pinv_experiment.ipynb  laplacian_pinv_experiment_setup.ipynb  laplacians.eps  multilevel_2d_wavelets.ipynb  plot_r_rt.ipynb  sandbox.ipynb  weighted_laplacian_pinv.ipynb  zero_bc_gradient.ipynb
dev/structured/: block.ipynb  circulant.ipynb  new_toeplitz.ipynb  toeplitz.ipynb
docs/source/: _old.rst  api.rst  catalogue.rst  (+5 more)
(+130 files in other folders)
