[build-system]
requires = ["setuptools>=59.2.0", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "jlinops"
version = "0.0.1"
authors = [
  { name="Jonathan Lindbloom", email="jonathan@lindbloom.com" },
]
description = "Some custom linear operators."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["matrices", "linear operators"]

[project.urls]
"Homepage" = "https://github.com/jlindbloom/jlinops"
"Bug Tracker" = "https://github.com/jlindbloom/jlinops/issues"
